ufw (0.30-1) UNRELEASED; urgency=low

  * new upstream release
  * debian/rules: only install upstart on Ubuntu 9.10 and later

 -- Jamie Strandboge <jamie@ubuntu.com>  Sat, 17 Oct 2009 23:05:56 -0500

ufw (0.29-5) unstable; urgency=low

  * reduce console output when using Upstart so that ufw is quiet when
    ufw is disabled or enabled and no errors
    - src/ufw-init: add add 'quiet' option on start
    - debian/ufw.upstart.ubuntu: use 'quiet' option on start
  * Debconf translation updates:
    - Vietnamese (thanks to Clytie Siddall. closes: #547919)

 -- Jamie Strandboge <jamie@ubuntu.com>  Wed, 23 Sep 2009 18:06:56 -0500

ufw (0.29-4) unstable; urgency=low

  * debian/rules: add missing dot for update-rc.d invocation (closes: #547330)

 -- Jamie Strandboge <jamie@ubuntu.com>  Fri, 18 Sep 2009 13:26:53 -0500

ufw (0.29-3) unstable; urgency=low

  * use upstart instead of sysv initscript on Ubuntu (LP: #431804)
    - debian/control: Bump build-dependency on debhelper for Upstart-aware
      dh_installinit. Add Build-Dep on lsb-release
    - add debian/ufw.upstart.ubuntu
    - move debian/ufw.init to debian/ufw.init.debian
    - debian/ufw.init: rename to debian/ufw.init.debian and update insserv
      info to reflect reality
    - debian/rules: use upstart if Ubuntu and sysv if Debian
    - debian/postinst and debian/postrm: remove calls to update-rc.d
  * error out when filesystem is read-only. Merge from trunk (LP: #430053)
  * catch exception if can't find parent pid when refreshing application
    profiles. Merge from trunk (LP: #424528)
  * add doc/upstart.example and update README for Debian users who want to
    use upstart

 -- Jamie Strandboge <jamie@ubuntu.com>  Wed, 16 Sep 2009 13:32:39 -0500

ufw (0.29-2) unstable; urgency=low

  * Debconf translation updates:
    - unfuzzied Italian (closes: #540204)
    - ran debconf-updatepo

 -- Jamie Strandboge <jamie@ubuntu.com>  Tue, 01 Sep 2009 16:26:07 -0500

ufw (0.29-1) unstable; urgency=low
