@@ -1,7 +1,11 @@
 ufw (0.30-1) UNRELEASED; urgency=low
 
   * new upstream release
-  * debian/rules: only install upstart on Ubuntu 9.10 and later
+  * debian/rules:
+    - only install upstart on Ubuntu 9.10 and later
+    - use $(PYTHON) with setup.py and test suite
+  * debian/control: drop versioned depends on iptables. This helps with
+    backporting now that the test suite can handle it
 
  -- Jamie Strandboge <jamie@ubuntu.com>  Sat, 17 Oct 2009 23:05:56 -0500
 
